syntax = "proto3";
package tibc.core.packet.v1;

option go_package = "github.com/bianjieai/tibc-go/modules/tibc/core/04-packet/types";

import "gogoproto/gogo.proto";
import "tibc/core/packet/v1/packet.proto";

// GenesisState defines the tibc channel submodule's genesis state.
message GenesisState {
  repeated PacketState       acknowledgements = 2 [(gogoproto.nullable) = false];
  repeated PacketState       commitments      = 3 [(gogoproto.nullable) = false];
  repeated PacketState       receipts         = 4 [(gogoproto.nullable) = false];
  repeated PacketSequence    send_sequences   = 5
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"send_sequences\""];
  repeated PacketSequence recv_sequences = 6
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"recv_sequences\""];
  repeated PacketSequence ack_sequences = 7
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"ack_sequences\""];
}

// PacketSequence defines the genesis type necessary to retrieve and store
// next send and receive sequences.
message PacketSequence {
  string source_chain    = 1 [(gogoproto.moretags) = "yaml:\"source_chain\""];
  string destination_chain = 2 [(gogoproto.moretags) = "yaml:\"destination_chain\""];
  uint64 sequence   = 3;
}
